fixed spacing in mobile view

--- a/src/pages/programs/angelbot.module.css
+++ b/src/pages/programs/angelbot.module.css
@@ -32,6 +32,13 @@
   max-width: 60px;
 }
 
+.form .subheader2 {
+  margin: 20px 0 10px;
+}
+.form .subheader2 + p {
+  margin-top: 0;
+}
+
 @media only screen and (min-width: 768px) {
   .quote {
     max-width: 290px;
@@ -89,12 +96,8 @@
   }
 
   .form .subheader2 {
-    margin: 20px 0 10px;
     flex-wrap: none;
     flex-basis: 100%;
-  }
-  .form .subheader2 + p {
-    margin-top: 0;
   }
 
   .inputText {
